<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recommend.DrugActivity">

    <TextView
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/interbold"
        android:text="@string/obat"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/iv_obat1"
        android:layout_width="90dp"
        android:layout_height="124dp"
        android:src="@drawable/obat1"
        android:layout_marginTop="110dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tv_obat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:textColor="@color/black"
        android:fontFamily="@font/interbold"
        android:textSize="16sp"
        android:text="@string/dithane_m_45_80_wp"
        android:layout_marginStart="120dp"/>

    <TextView
        android:id="@+id/tv_detailobat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_obat1"
        android:layout_marginStart="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/detail_obat1"
        android:fontFamily="@font/interregular"/>

    <ImageView
        android:id="@+id/iv_obat2"
        android:layout_width="90dp"
        android:layout_height="124dp"
        android:src="@drawable/obat2"
        android:layout_marginTop="260dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tv_obat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:textColor="@color/black"
        android:fontFamily="@font/interbold"
        android:textSize="16sp"
        android:text="@string/amistartop_325_sc_fungisida"
        android:layout_marginStart="120dp"/>

    <TextView
        android:id="@+id/tv_detailobat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_obat2"
        android:layout_marginStart="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/detailobat2"
        android:fontFamily="@font/interregular"/>

    <ImageView
        android:id="@+id/iv_obat3"
        android:layout_width="90dp"
        android:layout_height="124dp"
        android:src="@drawable/obat3"
        android:layout_marginTop="410dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/tv_obat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:textColor="@color/black"
        android:fontFamily="@font/interbold"
        android:textSize="16sp"
        android:text="@string/benlox_50_wp"
        android:layout_marginStart="120dp"/>

    <TextView
        android:id="@+id/tv_detailobat3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_obat3"
        android:layout_marginStart="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/detailobat2"
        android:fontFamily="@font/interregular"/>
</RelativeLayout>