<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:fontFamily="@font/interbold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="28sp"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="242dp"
            android:layout_height="194dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:id="@+id/iv_home"
            android:layout_below="@+id/tv_app"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_app" />

        <Button
            android:id="@+id/btn_treat"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/treatment"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/iv_home"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/interbold"
            android:textSize="13sp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/btn_obat"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/obat"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_treat"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:fontFamily="@font/interbold"
            android:textSize="14sp"
            android:backgroundTint="@color/green"/>

        <Button
            android:id="@+id/btn_tips"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:text="@string/tips"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:fontFamily="@font/interbold"
            android:textSize="14sp"
            android:backgroundTint="@color/green"/>
    </LinearLayout>
</RelativeLayout>