<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

     <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.curecornapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_treatmentActivity"
            app:destination="@id/treatmentActivity" />
        <action
            android:id="@+id/action_navigation_home_to_drugActivity"
            app:destination="@id/drugActivity" />
        <action
            android:id="@+id/action_navigation_home_to_tipsActivity"
            app:destination="@id/tipsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.curecornapp.ui.plant.PlantFragment"
        android:label="@string/title_plant"
        tools:layout="@layout/fragment_plant" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.curecornapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <activity
        android:id="@+id/drugActivity"
        android:name="com.example.curecornapp.recommend.DrugActivity"
        android:label="activity_drug"
        tools:layout="@layout/activity_drug" />
    <activity
        android:id="@+id/treatmentActivity"
        android:name="com.example.curecornapp.recommend.TreatmentActivity"
        android:label="activity_treatment"
        tools:layout="@layout/activity_treatment" />
    <activity
        android:id="@+id/tipsActivity"
        android:name="com.example.curecornapp.recommend.TipsActivity"
        android:label="activity_tips"
        tools:layout="@layout/activity_tips" />
</navigation>