<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recommend.TipsActivity">

    <TextView
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/interbold"
        android:text="@string/tips"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCorn"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:background="@drawable/tips1"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corn_seeds_selections"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="260dp"
        android:fontFamily="@font/interbold"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSoils"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:background="@drawable/tips2"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climate_and_soils"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="460dp"
        android:fontFamily="@font/interbold"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="510dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlanting"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:background="@drawable/tips3"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planting_distance"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="660dp"
        android:fontFamily="@font/interbold"
        android:textColor="@color/black"
        android:textSize="20sp"/>

</RelativeLayout>